FIX on mobile menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -325,9 +325,6 @@ button {
  width: 100%;
  height: 100%;
 
- max-width: 428px;
- max-height: 796px;
-
  padding: 40px;
 }
 
